Update button text

--- a/payment/templates/item.html
+++ b/payment/templates/item.html
@@ -10,6 +10,6 @@
     <h1>{{ item.name }}</h1>
     <p>{{ item.description }}</p>
     <p>{{ item.price }}</p>
-    <button id="buy-button" item-id ="{{ item.id }}">Buy</button>
+    <button id="buy-button" item-id ="{{ item.id }}">Купить</button>
   </body>
 </html>
