Add currency to Item Model

--- a/payment/templates/item.html
+++ b/payment/templates/item.html
@@ -9,7 +9,7 @@
   <body>
     <h1>{{ item.name }}</h1>
     <p>{{ item.description }}</p>
-    <p>{{ item.price }}</p>
+    <p>{{ item.price }} {{ item.currency }}</p>
     <button id="buy-button" item-id ="{{ item.id }}">Купить</button>
   </body>
 </html>
