--- a/payment/templates/main.html
+++ b/payment/templates/main.html
@@ -3,10 +3,10 @@
   {% load static %}
   <script src="{% static 'js/mainScript.js' %}"></script>
   <head>
-    <title>MAIN PAGE</title>
+    <title>Главная страница</title>
   </head>
   <body>
-    <h1>MAIN PAGE</h1>
+    <h1>Главная страница</h1>
     Введите id товара или заказа<input id="input-id" type="number">
     <button id="item">Купить товар</button>
     <button id="order">Оплатить заказ</button>
