--- a/payment/templates/order.html
+++ b/payment/templates/order.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="ru">
   {% load static %}
-  <script src="{% static 'js/orderScript.js' %}"></script>
-  <script src="https://js.stripe.com/clover/stripe.js"></script>
   <head>
     <title>Заказ {{ order.id }}</title>
+    <script src="{% static 'js/payScript.js' %}"></script>
   </head>
   <body>
     <h1>Номер заказа: {{ order.id }}</h1>
@@ -16,6 +15,6 @@
         {% endfor %}
     </ul>
     <p>Итого: {{ order.total_amount }}</p>
-    <button id="buy-order-button" order-id ="{{ order.id }}">Оплатить заказ</button>
+    <button id="buy-button" data-pay-type="order" data-id ="{{ order.id }}">Оплатить заказ</button>
   </body>
 </html>
