--- a/payment/templates/cancel.html
+++ b/payment/templates/cancel.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head><title>Отмена оплаты</title></head>
+  {% load static %}
+  <head>
+    <title>Отмена оплаты</title>
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+  </head>
   <body>
     <h1>Ваша оплата была отменена!</h1>
     <p>
