--- a/payment/templates/item.html
+++ b/payment/templates/item.html
@@ -3,6 +3,7 @@
   {% load static %}
   <head>
     <title>{{ item.name }}</title>
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <script src="{% static 'js/payScript.js' %}"></script>
   </head>
   <body>
