--- a/payment/templates/main.html
+++ b/payment/templates/main.html
@@ -3,6 +3,7 @@
   {% load static %}
   <head>
     <title>Главная страница</title>
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <script src="{% static 'js/mainScript.js' %}"></script>
   </head>
   <body>
