--- a/payment/templates/paid_order.html
+++ b/payment/templates/paid_order.html
@@ -3,6 +3,7 @@
   {% load static %}
   <head>
     <title>Заказ {{ order.id }}</title>
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
   </head>
   <body>
     <h1>Данный заказ уже оплачен, спасибо за Ваш заказ!</h1>
