--- a/payment/templates/success.html
+++ b/payment/templates/success.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head><title>Успешная оплата</title></head>
+  {% load static %}
+  <head>
+    <title>Успешная оплата</title>
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+  </head>
   <body>
     <h1>Спасибо за заказ!</h1>
     <p>
