--- a/payment/templates/order.html
+++ b/payment/templates/order.html
@@ -3,6 +3,7 @@
   {% load static %}
   <head>
     <title>Заказ {{ order.id }}</title>
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <script src="{% static 'js/payScript.js' %}"></script>
   </head>
   <body>
