Update text on buttons

--- a/payment/templates/main.html
+++ b/payment/templates/main.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Главная страница</h1>
     Введите id товара или заказа<input id="input-id" type="number">
-    <button id="item">Купить товар</button>
-    <button id="order">Оплатить заказ</button>
+    <button id="item">Посмотреть товар</button>
+    <button id="order">Посмотреть заказ</button>
   </body>
 </html>
