--- a/payment/templates/item.html
+++ b/payment/templates/item.html
@@ -10,6 +10,6 @@
     <h1>{{ item.name }}</h1>
     <p>{{ item.description }}</p>
     <p>{{ item.price }} {{ item.currency }}</p>
-    <button id="buy-button" data-pay-type="item" data-id ="{{ item.id }}">Купить</button>
+    <button id="buy-button" data-pay-type="item" data-id ="{{ item.id }}">Оплатить товар</button>
   </body>
 </html>
